# Exosims-Sandbox

./: .gitattributes  .gitignore  CLAUDE.md  EXOSIMS_symlink.txt  Makefile  README.md  Run-exp.aftac2  Run-exp.aftac3  Run-exp.sh  add-sims-old.sh  add-sims.sh  exp-add-sims.sh
Experiments/: HOWTO-run-experiment.txt  HabEx_4m_TSDD_BigEns.json  HabEx_4m_TSDD_pop100DD_minC.json  HabEx_4m_TSDD_pop100DD_revwt.json  entropy.cmd  entropy.out  run-experiment-howto.txt  seed1.txt  seed10.txt  seed100-mk1.txt  seed100-mk2.txt  seed100-mk3.txt  seed100.txt  seed1000-mk2.txt  seed1000.txt  seed2.txt  seed200.txt  seed24.txt  seed300.txt  seed46-mk2.txt  seed46-mk3.txt  seed46.txt  seed500-mk2.txt  seed500.txt  seed64.txt  xform-adapt.json  xform-c4sample-zoom1.json  xform-c4sample.json  xform-coef-2023-08-04.json  xform-dmaglim-iwa.json  xform-dmaglim.json  xform-tune-coeff-1d.json  xform_coeffs.json  xform_coeffs_2.json  xform_coeffs_eprv_det1_v2.json  xform_coeffs_eprv_det1_v3.json  (+3 more)
util/doc_sandbox/: INSTRUCTIONS.txt  Makefile  gen_pages.py  mkdocs.yml  mkdocs_sh_setup.sh  pre_mkdocs.py  pyproject.toml
util/doc_sandbox/Old/: README-pydocmd.txt  README.txt  execution-ipyparallel.md  pydocmd.yml
util/doc_sandbox/docs/: binned-ensemble-gallery.md  execution.md  index.md  path-ensemble-gallery.md  single-drm-gallery.md
util/doc_sandbox/docs/implementation/: PlanetBins.md  README.txt  drm_tabulate.md  keepout_path_graphics.md  reduce_drm_sets.md  reduce_drms.md  utils.md
util/doc_sandbox/util_detail/: README  README.txt  drm_tabulate.py  keepout_path_graphics.py  reduce_drms.py
(+2749 files in other folders)
